# serde-detach

./: Cargo.toml
src/: lib.rs
