[package]
name = "serde-detach"
version = "0.0.0-alpha.0"
authors = ["Tamme Schichler <tamme@schichler.dev>"]
edition = "2018"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = "1.0.114"
wyz = "0.2.0"

[dev-dependencies]
serde = { version = "*", features = ["derive"] }
serde-object = { path = "../serde-object" }
taml = { path = "../taml", default-features = false }
